<resources>
    <string name="app_name">TempoWala</string>

    //register page
    <string name="reg_toptext">TempoWala</string>
    <string name="reg_2ndtext">Create A New Account</string>
    <string name="reg_3rdtext">Full Name</string>
    <string name="reg_4thtext">Email id</string>
    <string name="reg_5thtext">Password</string>
    <string name="reg_6thtext">Phone No.</string>
    <string name="reg_7thtext">Sign Up</string>
    <string name="reg_8thtext">Have an Account? Login Here.</string>

    //login page
    <string name="log_1sttext">Login Page</string>
    <string name="log_2ndtext">Sign In</string>
    <string name="log_3rdtext">New Here? Create Account.</string>
    <string name="log_4thtext">Forgot Password?</string>

    //mainactivity
    <string name="logout">logout</string>
    <string name="profile">Your profile</string>
    <string name="verifyemail">Email not verified!</string>
    <string name="verifybtn">Verify Email</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notice">Please Verify Your Email to Move Further.\n
        If you didn\'t get verification email \n
        click on verify email button or check your spam folder.\n
        Once you verify the email kindly press the \n
        logout button and login again.


    </string>
    //bookingpage
    <string name="firstlastname">Fullname (First name &amp; Last name)</string>
    <string name="mobnum">10 digit phone number</string>
    <string name="pincode">6 Digit pincode</string>
    <string name="flatno">Flat No,Bldg Name,Company,Apartment</string>
    <string name="area">Area, Colony, Street, Sector, Village</string>
    <string name="Landmark">Landmark</string>
    <string name="Town">Town,City,Village</string>
    <string name="State">State</string>
    <string name="book">book</string>
    //bookinghispage
    <string name="history">Booking History</string>
    <string name="editbook">Edit</string>
    <string name="enterpickup">Enter The Pickup Details</string>
    <string name="enterdestination">Enter The Destination Details</string>
    <string name="yourpickupdetails">Your Pickup Details</string>
    <string name="yourdestinationdetails">Your Destination Details</string>
    <string name="cancelbook">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="nobooking">No Booking History!</string>
    <string name="nobooking1">Go to Booking Page</string>
    <string name="nobooking2">To Start Booking..</string>
    //alertbuilder
    <string name="Title"><b>FARE CALCULATOR</b></string>
    <string name="Message"><b>ENTER KM TO CALCULATE</b>\n\n<i>NOTE:The Fare Price Is Subject to Changes\nConfirm the price after booking on call.\n</i></string>


    <string name="Welcome">TempoWala</string>
    <string name="mainlogout">Logout</string>
    <string name="welcome">Home Page</string>
    <string name="booknow">BOOK NOW</string>
    <string name="bookinhis">Booking History</string>
    <string name="joinus">Join us</string>
    <string name="Request">Please fill this application to join our service.\nAfter you click on submit,\nWe will review your application and call you,\nOnce it has been approved.</string>
    <string name="faq">Faq</string>
    <string name="select">Click on one of the following:</string>
    <string name="aadhar">12 digit Aadhaar number</string>
    <string name="dl">Driving License number</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="clickonthem">Click on the Questions:</string>
    <string name="alreadyexists">Your application is already submitted.\nOnce it has been approved we will call you.\nThanks,\nTeam TempoWala.</string>
    <string name="doesntexists">No Booking History.\nGo to Booking Page! To Start Booking.</string>

    //faqpage
    <string name="q1">Q1) Fare Charges?</string>
    <!--    <string name="a1">The Fare System is subject to changes\nPlease Confirm the price with our employee on call after placing order.-->
    <!--        \n\t*Approximate*-->
    <!--        \n|&#45;&#45;Km&#45;&#45; |-&#45;&#45;Rs&#45;&#45;&#45;&#45;|-->
    <!--        \n|-&#45;&#45;1&#45;&#45;&#45;&#45;|-&#45;&#45;500-&#45;&#45;|-->
    <!--        \n|-&#45;&#45;2&#45;&#45;&#45;&#45;|-&#45;&#45;700-&#45;&#45;|+200-->
    <!--        \n|-&#45;&#45;3&#45;&#45;&#45;&#45;|-&#45;&#45;900-&#45;&#45;|+200-->
    <!--        \n|-&#45;&#45;4&#45;&#45;&#45;&#45;|&#45;&#45;1100&#45;&#45;|+200-->
    <!--        \n|-&#45;&#45;5&#45;&#45;&#45;&#45;|&#45;&#45;1400&#45;&#45;| 200+100 (5km +100)-->
    <!--        \n|-&#45;&#45;6&#45;&#45;&#45;&#45;|&#45;&#45;1700&#45;&#45;|+300-->
    <!--        \n|-&#45;&#45;7&#45;&#45;&#45;&#45;|&#45;&#45;2000&#45;&#45;|+300-->
    <!--        \n|-&#45;&#45;8&#45;&#45;&#45;&#45;|&#45;&#45;2300&#45;&#45;|+300-->
    <!--        \n|-&#45;&#45;9&#45;&#45;&#45;&#45;|&#45;&#45;2600&#45;&#45;|+300-->
    <!--        \n|-&#45;&#45;10&#45;&#45; |&#45;&#45;3000&#45;&#45;| 300+100 (5km +100)</string>-->
    <string name="a1">Ans) Click to calculate Fare</string>
    <string name="q2">Q2) How to Book?</string>
    <string name="a2">Ans) On the Home Page click on Book Now Button.\nThen Fill the details and click on Book Button.\nCongratulations! You have Booked Your First Tempo.\n\nClick to watch video!</string>
    <string name="q3">Q3) How to check your Bookings?</string>
    <string name="a3">Ans) On the homepage click on Booking History\nYou will be able to see your booking history.\n\nClick to watch video!</string>
    <string name="q4">Q4) How to Edit/Cancel/Delete booking?</string>
    <string name="a4">Ans) On the homepage click on Booking History.\nScroll down to see Edit &amp; Cancel buttons.\n\nClick to watch video</string>
    <string name="q5">Q5) What happens after booking is successful?</string>
    <string name="a5">Ans) After a booking is successful,\nWe recieve the details you entered.\nAn employee then calls on your Number,\nTo Assist with further procedure.</string>
    <string name="q6">Q6) How to pay? </string>
    <string name="a6">Ans) You can pay by Cash on Delivery, once your order is completed.</string>
    <string name="q7">Q7) Having a tempo,How to join?</string>
    <string name="a7">Ans) To join us simply click on the Join Us button from Home Page.\nFill in required details and click on submit.\nOnce submitted We will Review your Application.\nOnce Approved we will call you to discuss further.\n\nClick to watch video!</string>
    <string name="q8">Q8) Working hours?</string>
    <string name="a8">Ans) 10AM To 8PM 24x7.\n Bookings after 8PM will be attended next day!</string>
    <string name="q9">Q9) Contact Us/Lodge Complaint</string>
    <string name="a9">Ans) Click to Email:tempowalaofficial@gmail.com</string>
    <string name="q10">Q10) About Us.</string>
    <string name="a10">Ans) We are a small startup company,\nFounded in Jan,2021.\nWe have a vision to provide\neasy booking solutions to our users.\nWe also want to create employment by\nletting new TempoWalas Join Us.\nOur goal is to serve the people with full dedication.</string>
    <string name="q11">Q11) Forgot Password/Reset Password?</string>
    <string name="a11">Ans) Click to Reset Password.</string>

    /Activity yt
    <string name="howto1">How to book a tempo?</string>
    <string name="howto4">1 - On the Home Page click on Book Now Button.\n2 - Then Fill the details and click on Book Button.\n3 - Congratulations! You have Booked Your First Tempo.</string>

    <string name="howto2">How to Edit/Cancel/Delete booking?</string>
    <string name="howto5">1 - On the homepage click on Booking History.\n2 - Scroll down to see Edit/Cancel/Delete buttons.</string>

    <string name="howto3">How to Join Us?</string>
    <string name="howto6">1 - To join us simply click on the Join Us button from Home Page.\n2 - Fill in required details and click on submit.\n3 - Once submitted We will Review your Application.\n4 - Once Approved we will call you to discuss further.</string>



</resources>