<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ab"
    android:isScrollContainer="false"
    tools:context=".faq">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:context=".faq">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Welcome"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textSize="36sp"
            app:fontFamily="@font/racing_sans_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frequentlyaskedquestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/faqs"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="18sp"
            app:fontFamily="@font/racing_sans_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/clickonthem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/clickonthem"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            android:textSize="18sp"
            app:fontFamily="@font/racing_sans_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frequentlyaskedquestions" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clickonthem">

            <TextView
                android:id="@+id/faq1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q1"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/a1"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="visible" />

            <TextView
                android:id="@+id/faq2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q2"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a2"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q3"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a3"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q4"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a4"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q5"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a5"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q6"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a6"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q7"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a7"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q8"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a8"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q9"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/a9"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q10"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a10"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/faq11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/q11"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ans11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/a11"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                android:textColorLink="#000000"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>