<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab"
    tools:context=".Joinus">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Welcome"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textSize="36sp"
        app:fontFamily="@font/racing_sans_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joinus"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:fontFamily="@font/racing_sans_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Request"
        android:textColor="#AA00FF"
        android:textColorHighlight="#AA00FF"
        android:textColorHint="#AA00FF"
        android:textColorLink="#AA00FF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/tempowalaname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/fullname"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/firstlastname"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFD600"
        android:textColorHint="#000000"
        android:textColorLink="#FFD600"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notice" />

    <EditText
        android:id="@+id/tempowalaphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/phoneno"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/mobnum"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="#000000"
        android:textColorHighlight="#FFD600"
        android:textColorHint="#000000"
        android:textColorLink="#FFD600"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempowalaname" />

    <EditText
        android:id="@+id/tempowalaadhar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/aadhar"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/aadhar"
        android:inputType="phone"
        android:maxLength="12"
        android:textColor="#000000"
        android:textColorHighlight="#FFD600"
        android:textColorHint="#000000"
        android:textColorLink="#FFD600"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempowalaphone" />

    <EditText
        android:id="@+id/tempowaladl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/driving"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/dl"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="#000000"
        android:textColorHighlight="#FFD600"
        android:textColorHint="#000000"
        android:textColorLink="#FFD600"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempowalaadhar" />

    <EditText
        android:id="@+id/tempowalacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/town"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Town"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFD600"
        android:textColorHint="#000000"
        android:textColorLink="#FFD600"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempowaladl" />

    <EditText
        android:id="@+id/tempowalastate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/state"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/State"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFD600"
        android:textColorHint="#000000"
        android:textColorLink="#FFD600"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempowalacity" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/black"
        android:text="Submit"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempowalastate"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/alreadyexist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/alreadyexists"
        android:textColor="#AA00FF"
        android:textColorHighlight="#AA00FF"
        android:textColorHint="#AA00FF"
        android:textColorLink="#AA00FF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
